src/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

html {
    scroll-behavior: smooth;
}

body {
    font-family: Roboto, sans-serif;
    display: flex;
    flex-direction: column;
    transition: 0.3s ease;
}

html, body {
    height: 100%;
}

.italic-font {
    font-style: italic;
}

.content {
    flex: 1 0 auto;
}

.footer {
    box-shadow: 0 1rem 3rem rgba(0,0,0,.175) !important;
    margin-top: 50px;
    flex-shrink: 0;
    border-top-right-radius: var(--bs-border-radius) !important;
    border-top-left-radius: var(--bs-border-radius) !important;
    padding: 3rem !important;
}

.social-link.nav-link {
    color: #000000;
    padding: 1rem !important;
}

.social-link.nav-link.behance:hover {
    color: #053EFF !important;
}

.social-link.nav-link.linkedin:hover {
    color: #0072B1 !important;
}

.social-link.nav-link.github:hover {
    color: #6E5494 !important;
}

.social-link.nav-link.instagram:hover {
    color: #FD1D1D !important;
}

.social-link.nav-link.tokopedia:hover {
    color: #41B549 !important;
}

.navbar-link:hover {
    cursor: pointer;
    color: #fcc72e !important;
}

.logo-space {
    padding: 20px;
}

.logo {
    height: 35px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: auto;
}

.about-image {
    width: 300px;
    height: auto;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
    border-radius: var(--bs-border-radius) !important;
}

.image-link {
    text-decoration: none;
    color: #7E7E7E;
    transition: 0.3s ease;
    display: inline-block;
}

.image-tiger-box {
    display: flex !important;
    align-items: flex-end !important;
    flex-direction: column !important;
}

.image-owl-box {
    display: flex !important;
    flex-direction: column !important;
}

.image-link:hover {
    color: #fcc72e;
}

.image-link-footer {
    text-decoration: none;
    color: #FFFFFF;
    transition: 0.3s ease;
    display: inline-block;
}

.image-link-footer:hover {
    color: #fcc72e;
}

.image-link p {
    font-size: 14px;
}

.image-owl-align {
    margin-top: 50px;
    margin-left: 50px;
}

.image-tiger-align {
    margin-top: -150px;
    margin-right: 50px;
}

.work-margin {
    padding-top: 50px;
}

.tns-item {
    margin-top: 50px;
    margin-bottom: 50px;
}

.work-card-container {
    height: 400px;
    position: relative;
}

.work-card-social {
    font-size: calc(1.375rem + 1.5vw);
    margin-bottom: 0 !important;
}

.work-card-size {
    height: 100%;
    width: 100%;
    object-fit: cover;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
}

.work-card-overlay {
    position: absolute;
    top: 0px;
    background-color: rgba(0, 0, 0, 0.7);
    color: #FFFFFF;
    width: 100%;
}

.work-card-overlay {
    height: 100%;
}

.fixed-policies-box {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.fixed-policies-box-scroll {
    overflow-y: scroll !important;
}

.fixed-policies-box-scroll::-webkit-scrollbar {
    width: 5px;
}

.fixed-policies-box-scroll::-webkit-scrollbar-track {
    background: #f1f1f1;
    border-radius: 5px;
}

.fixed-policies-box-scroll::-webkit-scrollbar-thumb {
    background: #888888;
    border-radius: 5px;
}

.fixed-policies-box-scroll::-webkit-scrollbar-thumb:hover {
    background: #555555;
}

.work-card-overlay .container-fluid {
    height: 100%;
}

.work-card-overlay .container-fluid .row {
    height: 100%;
}

.contact-footer {
    text-decoration: none;
    transition: 0.3s ease;
    color: #000000;
}

.contact-footer.whatsapp:hover {
    color: #25D366 !important;
}

.contact-footer.email:hover {
    color: #34B7F1 !important;
}

.social-media {
    margin-right: 1rem !important;
}

.social-media-footer {
    display: inline-block;
    text-decoration: none;
    color: #000000;
    transition: 0.3s ease;
}

.social-media-footer.behance:hover {
    color: #053EFF !important;
}

.social-media-footer.linkedin:hover {
    color: #0072B1 !important;
}

.social-media-footer.github:hover {
    color: #6E5494 !important;
}

.social-media-footer.instagram:hover {
    color: #FD1D1D !important;
}

.social-media-footer-margin {
    margin-top: 16px;
    margin-bottom: 16px;
}

.privacy-terms {
    text-decoration: none;
    color: #000000;
    transition: 0.3s ease;
    font-weight: 300 !important;
    display: inline-block !important;
}

.privacy-terms:hover {
    color: #fcc72e !important;
}

.link-style {
    display: block;
    text-decoration: none;
    margin-bottom: 8px;
    color: #000000;
    transition: 0.3s ease;
    margin-bottom: 1rem !important;
    display: inline-block !important;
    font-weight: 300 !important;
}

.link-style:hover {
    color: #fcc72e !important;
    cursor: pointer;
}

.non-link-style {
    margin-bottom: 8px;
}

.work-list-link {
    display: inline-block;
    text-decoration: none;
    color: #000000;
    transition: 0.3s ease;
}

.work-list-link:hover {
    color: #fcc72e;
}

.navigation {
    padding: 10px;
    z-index: 9999;
    position: sticky;
    top: 0px;
    background-color: #FFFFFF;
    transition: 0.3s ease;
}

.gerraour-nav {
    margin-left: auto;
    margin-right: auto;
}

.gerraour-nav.right {
    margin-right: 0px !important;
    padding-right: 48px;
}

.navbar-logo-container {
    display: none;
}

.navbar-logo-container.show {
    display: block;
    padding-left: 48px;
}

.navbar-logo {
    height: 30px;
    width: auto;
}

.navbar-logo {
    cursor: pointer;
}

.portfolio-social-button {
    color: #FFFFFF;
    transition: 0.3s ease;
}

.portfolio-social-button.github:hover {
    color: #6E5494 !important;
}

.portfolio-social-button.behance:hover {
    color: #053EFF !important;
}

.work-card-padding-mobile {
    padding: 48px !important;
}

.box-title-container {
    background-color: #fcc72e;
    display: inline;
    width: max-content;
    display: flex !important;
    padding-top: 0.5rem !important;
    padding-bottom: 0.5rem !important;
    padding-right: 1rem !important;
    padding-left: 1rem !important;
    margin-bottom: 1rem !important;
}

.work-card-info {
    display: flex !important;
    flex-direction: column !important;
    align-items: flex-end !important;
    justify-content: flex-end !important;
}

.box-title-container p {
    color: #FFFFFF;
}

.err404-logo {
    width: 250px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 3rem !important;
}

.err404-center {
    justify-content: center !important;
    align-items: center !important;
    height: 100% !important;
}

.err404-link {
    color: #000000;
    text-decoration: none;
    transition: 0.3s ease;
}

.err404-link:hover {
    color: #fcc72e !important;
    text-decoration: none;
    transition: 0.3s ease;
}

.copyrights-misc {
    margin-top: 16px;
}

.copyrights-misc-align {
    justify-content: flex-end !important;
    display: flex;
    align-items: flex-end !important;
}

.footer-stag-image {
    width: 100%;
    height: auto;
    margin-left: -100px;
    margin-top: -100px;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
}

.policies-content {
    padding: 3rem !important;
}

.image-link-container {
    margin-top: 10px;
    margin-bottom: 10px;
}

.notable-image {
    width: 100%;
    height: 450px;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
    object-fit: cover;
}

.notable-image-card {
    width: 100%;
    height: 200px;
    object-fit: cover;
    border-top-right-radius: var(--bs-border-radius) !important;
    border-top-left-radius: var(--bs-border-radius) !important;
}

.notable-social-link {
    font-size: 32px;
    transition: 0.5s ease;
    color: #000000;
}

.notable-social-link.behance:hover {
    color: #053EFF;
}

.notable-social-link.github:hover {
    color: #6E5494;
}

#refined-notable-work {
    margin-bottom: 50px;
}

.refined-notable-image {
    width: 100%;
    object-fit: cover;
    border-top-left-radius: var(--bs-border-radius) !important;
    border-top-right-radius: var(--bs-border-radius) !important;
}

.refined-character-image-box {
    border-radius: var(--bs-border-radius) !important;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
    height: 480px;
    width: 300px;
}

.refined-character-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.refined-notable-content-box {
    padding: 1.5rem !important;
}

.refined-company-link {
    text-decoration: none;
    color: #000000;
    transition: 0.5s ease;
}

.refined-company-link:hover {
    color: #FCC72E !important;
}

.refined-social {
    text-decoration: none;
    color: #000000;
    transition: 0.5s ease;
}

.refined-social.behance:hover {
    color: #053EFF !important;
}

.refined-social.github:hover {
    color: #6E5494 !important;
}

#quotes-section {
    margin-top: 200px;
    margin-bottom: 50px;
}

#wisdomData .tns-item {
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}

.refined-notable-box {
    background-color: #FFFFFF;
    border-radius: var(--bs-border-radius) !important;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
}

.quotes-carousel {
    padding-left: 3rem !important;
    padding-right: 3rem !important;
}

.dragon-image-box {
    height: 480px;
    width: 300px;
    border-radius: var(--bs-border-radius) !important;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
    background-color: grey;
    margin-left: auto;
}

.read-more-link {
    text-decoration: none;
    color: #464646;
    transition: 0.3s ease;
}

.read-more-link:hover {
    color: #fcc72e !important;
}

#article_section {
    padding-top: 50px;
}

.article-item {
    border-radius: var(--bs-border-radius) !important;
    padding: 1.5rem !important;
    margin-bottom: 2rem !important;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15) !important;
}

#lightdark-mode {
    padding: 1rem !important;
    border: 0 !important;
}

.light-mode-button {
    color: #C3AB67;
    transition: 0.5s ease;
}

.light-mode-button:hover {
    color: #FCC72E;
}

.dark-mode-button {
    color: #75A4C2;
    transition: 0.5s ease;
}

.dark-mode-button:hover {
    color: #57AAE0;
}

.spotify-embedded {
    border-radius: var(--bs-border-radius) !important;
    width: 50%;
}

.image-placeholder {
    width: 100%;
    height: 480px;
    background-color: grey;
    border-radius: var(--bs-border-radius) !important;
    position: relative;
}

.image-placeholder-overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 150px;
    left: 0;
}

.image-description-overlay {
    top: 0;
}

.image-link-container.green-scenery {
    margin: 20px;
}

.image-link-container.green-scenery .image-link {
    color: #464646;
}

.image-link-container.green-scenery .image-link:hover {
    color: #fcc72e;
}

.dragon-image-style {
    height: 100%;
    width: 100%;
    object-fit: cover;
    border-radius: var(--bs-border-radius) !important;
}

.image-link-container.dragon-text {
    text-align: right;
}

/* Dark Mode */

.dark-mode {
    background-color: #121217 !important;
}

.text-dark-mode {
    color: #FFFFFF !important;
}

.navigation-dark-mode {
    background-color: #121217;
}

.footer-dark-mode {
    background-color: #1A1A21;
    box-shadow: 0 1rem 3rem rgb(26, 26, 33) !important;
}

.shadow-dark-mode {
    box-shadow: 0 0.5rem 1rem rgba(26, 26, 33) !important;
}

.work-card-dark-mode {
    box-shadow: 0 0.5rem 1rem rgba(26, 26, 33) !important;
}

.refined-character-image-box-dark {
    box-shadow: 0 0.5rem 1rem rgba(26, 26, 33) !important;
}

.refined-notable-box-dark {
    background-color: #1A1A21;
    box-shadow: 0 0.5rem 1rem rgba(26, 26, 33) !important;
}

.article-item-dark-mode {
    background-color: #1A1A21;
    box-shadow: 0 0.5rem 1rem rgba(26, 26, 33) !important;
}

.dragon-image-box-dark-mode {
    box-shadow: 0 0.5rem 1rem rgba(26, 26, 33) !important;
}

.read-more-link-dark-mode {
    color: #7E7E7E;
}

/* Dark Mode End */

